# Infrared_Marble

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LJ.ipynb  LJ_download.py  Makefile  README.md  __init__.py  dates_luojia_myanmar.csv  dates_luojia_myanmar.xlsx  docker-compose.prod.yaml  docker-compose.yaml  environment.yaml  ntl-tool  ntl-tool.bat  package-lock.json  pyproject.toml  requirements.dev.txt  requirements.txt
assets/: Self-Assessment_Data Ethics.xlsx
data/: .gitignore
data/luojia/: image_counts.csv  image_counts_with_density.csv
data_analysis/: analysis.ipynb
docs/: luojia.md  todo-pre-final-submission.md
docs/milestones/: milestone-1.md  milestone-2.md  milestone-3-copy.md  milestone-3.md  milestone-4.md
docs/todos/: todo-pre-final-submission.md  todos-milestone-4.md
notebooks/: blackmarble_debug.ipynb  bm_vnp46a1.ipynb  difference_visualization.ipynb  getting_started.ipynb  visualization.ipynb  viz.ipynb  vnp46a1_radiance_m1x.ipynb
src/: __init__.py  cli.py  download.py  getting_started.ipynb  hello_world.ipynb  loading.py  main.py  misc.py  test_adminarea.py  test_geojson.py  utils.py  visualization.ipynb  visualization.py
src/api/: _types_helpers.py  compute_tile_density.py  dependencies.py  helpers.py  main.py  (+1 more)
static/: all_dates.csv  dates_luojia_myanmar.csv  image_counts.csv  image_counts_with_density.csv
web/: .dockerignore  Dockerfile  Dockerfile.prod  custom.d.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
(+76 files in other folders)
